@@ -1,3 +1,11 @@
+** v4.14 xx.xx.2019**
+* Prevent a lua error in Reminder Module.
+* Alot of more Nameplate settings in my install.
+* Update the appearance for my FlightPoints frame.
+* Added Azerite Item Tooltip back.
+* Minor tweaks to unitframe install.
+* Add Guildbest Frame on the LFG Frame > Mythic Keystones.
+
 ** v4.13 12.03.2019**
 * Removed my own System DataText i use now the ElvUI Datatext.
 * Removed Chat Menu, i never used it.
